Pagination + GetOrders + Assign bundles with array
