# docs/swagger.json
@@ -234,7 +234,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/db.Bundle"
+                                "$ref": "#/definitions/db.ListBundlesWithCustomerRow"
                             }
                         }
                     },
@@ -416,6 +416,32 @@
             }
         },
         "/orders": {
+            "get": {
+                "description": "Get all placed order with details",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "orders"
+                ],
+                "summary": "Get all orders",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/db.Order"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            },
             "put": {
                 "description": "Update an order specifying its end date, bundle mrc, nrc flag",
                 "consumes": [
@@ -851,6 +877,26 @@
                     "type": "integer"
                 },
                 "paid": {
+                    "type": "number"
+                }
+            }
+        },
+        "db.ListBundlesWithCustomerRow": {
+            "type": "object",
+            "properties": {
+                "assigned_customers": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "bundle_id": {
+                    "type": "integer"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "mrc": {
                     "type": "number"
                 }
             }
